--- a/tex/S3_L/S3_L_Fluctuations/S3_L_Fluctuations.tex
+++ b/tex/S3_L/S3_L_Fluctuations/S3_L_Fluctuations.tex
@@ -154,10 +154,11 @@
    
    また式(\ref{eq:18})を用いてボルツマン定数の不確かさを求めることを考える。電気測定器による測定値の不確かさは最小目盛$\pm$1、温度の不確かさは$\pm$0.1Kとすると
    \begin{eqnarray}
+   \Delta k_B &=& \sqrt{(\frac{\partial k_B}{\partial v_i}\Delta v_i)^2 + (\frac{\partial k_B}{\partial <V^2>}\Delta <V^2>)^2 + (\frac{\partial k_B}{\partial T}\Delta T)^2 + (\frac{\partial k_B}{\partial S}\Delta S)^2 + (\frac{\partial k_B}{\partial R}\Delta R)^2} \nonumber \\
    \frac{\Delta k_B}{k_B} &=& \sqrt{(2\frac{\Delta v_i}{v_i})^2 + (\frac{\Delta <V^2>}{<V^2>})^2 + (\frac{\Delta T}{T})^2 + (\frac{\Delta S}{S})^2 + (\frac{\Delta R}{R})^2} \nonumber \\
    \Delta k_B &=& 2 * 10^{-22} J/K \nonumber
    \end{eqnarray}
-   となる。ただしここで$\frac{\Delta S}{S}$は、図\ref{fig:1_f-v}より$S$を台形求めた場合は傾きの変化量が最も大きい区間でその実際の面積との誤差が大きくなるため、頂点を含む区画の実際の曲線からの台形の差分を$\Delta S$、その区間の台形の面積を$S$としている。そのため$\frac{\Delta S}{S}$比を最も大きくなるように見積もっている。
+   となる。ただしここで$\frac{\Delta S}{S}$は、図\ref{fig:1_f-v}より$S$を台形求めた場合は傾きの変化量が最も大きい区間でその実際の面積との誤差が大きくなるため、頂点を含む区画の実際の曲線からの台形の差分を$\Delta S$、その区間の台形の面積を$S$としている。そのため$\frac{\Delta S}{S}$比を最も大きくなるように見積もっている。また合成不確かさの式は[2]の記事を参考にした。
    
    ここでボルツマン定数の測定値と文献値[1]を以下に比較する。
    \begin{eqnarray}
@@ -189,12 +190,13 @@
    \begin{equation}
    e = 1.2 * 10^{-22} C \nonumber \\
    \end{equation}
-   となることがわかる。さらにその不確かさは、式(\ref{eq:19})から
+   となることがわかる。さらにその不確かさは、式(\ref{eq:19})から[2]
    \begin{eqnarray}
+   \Delta e &=& \sqrt{(\frac{\partial e}{\partial <I^2>}\Delta <I^2>)^2 + (\frac{\partial e}{\partial v_i}\Delta v_i)^2 + (\frac{\partial e}{\partial S}\Delta S)^2 + (\frac{\partial e}{\partial <i>}\Delta <i>)^2 } \nonumber \\
    \frac{\Delta e}{e} &=& \sqrt{(\frac{\Delta <I^2>}{<I^2>})^2 + (2\frac{\Delta v_i}{v_i})^2 + (\frac{\Delta S}{S})^2 + (\frac{\Delta <i>}{<i>})^2} \nonumber \\
    \Delta e &=& 1 * 10^{-23} C \nonumber
    \end{eqnarray}
-   となる。
+   となる。ただし、$S$の不確かさは\ref{fig:1_f-v}の面積の頂点付近で最も大きくなるとして、$\Delta S=20$V$^2$Hzと見積もっている。
    
    以下に電気素量の測定値と文献値[1]を比較する。
    \begin{eqnarray}
@@ -206,6 +208,29 @@
   
  \section{参考文献}
   [1]理科年表平成28年,p375
+  
+  [2]http://www.nite.go.jp/data/000050641.pdf
+  
+ \section{追記}
+  実験と考察について補足する。今回の実験結果はボルツマン定数、電気素量ともに２桁から３桁程度文献値からの差異を持っていた。これは本来ありえないことであり、その点について考える。
+  
+  ただし今回、$v_i^2/S$の値に問題はなく、データを整理した限りではこのトラブルを解決しうる値を得ることができなかった。したがってデータの記録ミスという可能性を考えてみた。さらに、データの桁数を除けば測定値と文献値が近い値となることが予想されることから、データ記録の際の単位の記入間違いであることを考える。
+  
+  はじめにボルツマン定数について。この場合、実験値は文献値に対して２桁大きくなっている。これが測定値の原因だとすると、その起因は図４の切片の大きさにほかならない。つまり切片が約-7程度であれば桁は揃う。したがって縦軸の電圧の２乗が２桁、つまり電圧値が１桁大きくなっていたとここでは判断する。この仮定のもと改めて計算してみると
+  \begin{eqnarray}
+   k_B \pm \Delta k_B &=& (1.7 \pm 0.2) * 10^{-23} J/K \nonumber \\
+   k_B(文献値) &=& 1.4 * 10^{-23} J/K \nonumber
+  \end{eqnarray}
+  となる。ここでも不確かさを含めた実験値の幅から$1*10^{-24}$J/K程度、文献値は離れているが、これは文献値から見た相対誤差で約7％といえる。この実験はほとんど確かな値が出ることがないと言えることから、この誤差は妥当なものだと判断する。
+  
+  また電気素量についても同様に考える。電気素量の場合は測定値が３桁、文献値より小さくなっている。この場合図６の切片が約-6程度になっていなければならないため、ここでは横軸の$<i>$が$\mu$とnの単位を間違えて記録していたとする。すると
+  \begin{eqnarray}
+   e \pm \Delta e &=& (1.2 \pm 0.1) * 10^{-19} C \nonumber \\
+   e(文献値) &=& 1.6 * 10^{-19} C \nonumber
+  \end{eqnarray}
+  となる。ここでも実験値の不確かさを含めた幅から文献値が$3*10^{-20}$C程度離れている。この値の文献値からの相対誤差は約18％である。この値もボルツマン定数の測定結果と同様の理由から妥当な値だと判断する。
+  
+  最後に、ここで考えたのは実験結果の間違いを正当に訂正できなかったため、そのデータ記録での人的ミスのうち最も近いと考えられるものを示し、そう仮定して訂正した時の誤差評価をしたものであることをここに示したい。それが多少強引な手段となってしまったことを自覚し、ここに追記として示した。
   
   
 \end{document}
