--- a/tex/sample.tex
+++ b/tex/sample.tex
@@ -25,7 +25,7 @@
   \includegraphics[width=8cm,clip]{}
   \caption{}
   \label{}
- \end{figure}%
+ \end{figure}
  
  % 文中で図、表を参照する場合は\ref{label名}
  \ref{}
