--- a/tex/S3_L/S3_L_Microprocessor/report2/S3_L_Microprocessor_2.tex
+++ b/tex/S3_L/S3_L_Microprocessor/report2/S3_L_Microprocessor_2.tex
@@ -8,34 +8,185 @@
 
 \begin{document}
   
-% \tableofcontents
-  
-% \newpage
+ %目次
+ \tableofcontents \newpage
   
   
 % 実験の背景と意義、レポートの構成などを記述
  \section{はじめに}
+  デジタル信号は0と1の信号の組み合わせでできている。各信号が0と1の2値であるが、現代のデジタル機器では幅広い数値を表現することができる。つまり離散的な値の組み合わせで、見掛け上連続的な幅を表現できるということになる。
   
+  ここでは、このコンピュータのシステムを演算装置(ALU)から、Z80コンピュータシステムや入出力制御までを通して理解することを目的とする。
+  
+  レポートはこの実験全体を2分し、以下のように各レポートで実験結果をまとめる。
+  \begin{itemize}
+  \item 1部: 演算装置(ALU:Arithmetic Logic Unit)
+  \item 2部: Z80コンピュータシステム、入出力制御
+  \end{itemize}
+  
+  そして、このレポートはそのうちの第2部であり、Z80の演算命令等の挙動観察実験、及び入出力制御をスイッチ入力、スピーカ制御について行った実験をまとめている。
   
   
 % 参考書などを用いて、目的と原理を記述
  \section{実験の目的と原理}
   
+  \subsection{Z80}
+   
+   \subsubsection{目的}
+   はじめに行うのはZ80の演算命令に対する挙動観察である。つまりあるプログラムを実行させるときに、実際コンピュータはどのようにそのメモリ、レジスタ、そしてスタックなどを理容しているのかを、デバッガーを用いて1命令ごとにトレースしていく。
+   
+   それがこの実験の目的であり、以下、必要な主な原理を述べる。
+   
+   \subsubsection{}
+   
+   
+  \subsection{入出力制御}
+   
+   \subsubsection{目的}
+   このマイクロプロセッサ実験の最後には入出力制御を行う。
+   
+   あるプログラムが汎用化のために使用者の入力を待って、それに対して出力を返すという挙動を示すとき、そのプログラムの作成は条件分岐やそれに伴うサブルーチンの形成を必要とする。これら条件分岐などのメソッドを用いて、入出力挙動を示すシステムを考えること(今回におけるプログラムを作成すること)を入出力制御と呼ぶ。
+   
+   ここではスイッチ入力によるLED出力の制御、及び周波数入力によるスピーカ出力の制御により入出力制御を学ぶ。
+   
+   \subsubsection{}
   
   
 % 実験の手順を順次説明
  \section{実験内容}
+  
+  \subsection{実験課題2.Z80の演算命令、フラグ、条件分岐及びサブルーチン実行時の観察}
+  
+   \subsubsection{実験課題2-1.テストプログラムによる動作検証}
+   
+   
+   \subsubsection{実験課題2-2.演算命令及びフラグの観察}
+   
+   
+   \subsubsection{実験課題2-3.フラグ、条件分岐及びサブルーチン実行時の観察}
+   
+   
+  
+  \subsection{実験課題3.入出力制御}
+  
+   \subsubsection{実験課題3-1.スイッチ入力とLEDの制御}
+   ここではスイッチ入力に対するLEDの出力制御を行った。
+   \begin{enumerate}
+   \item 表\ref{tab:junbi3-1}のアセンブリのコードを作成、コンパイルの後、デバッガーでトレースする。
+   \end{enumerate}
+   
+   \begin{table}[htb]
+  \begin{center}
+    \caption{SW及びスイッチ入力に対するLED出力の制御のアセンブリコード}
+    \begin{tabular}{|llll|} \hline
+ & ORG & 7000H & ;プログラム開始番地 \\
+ & LD & C, 30H & ;SWO-7のI/Oアドレス指定 \\
+KURIKAE: & IN & A, (C) & ;SWO-7からデータを入力 \\
+ & OUT & (11H), A & ;入力データをLEDに出力 \\
+ & CP & 55H & ;偶数スイッチのみがonか? \\
+ & JP & Z, OWARI & ;Yes:終了 \\
+ & JP & KURIKAE & ;No:データ入力を繰り返す \\
+OWARI: & NOP &  & ;ブレークポイント設定位置 \\
+ & END &  & ; \\ \hline
+    \end{tabular}
+    \label{tab:junbi3-1}
+  \end{center}
+ \end{table}
+   
+   \subsubsection{実験課題3-2.スピーカの制御}
+   音の高さと長さを読み込み、それを元にスピーカーで音を発生。さらに繰り返し実行による高さ・長さそれぞれの増加も出力に反映。
+   \begin{enumerate}
+   \item 表
+   \item PCレジスタを7000Hに設定。
+   \item 8F10H番地に音の高さの初期値を入力。
+   \item 8F12H番地に音の高さの増分を入力。
+   \item 8F14H番地に音の長さの初期値を入力。
+   \item 8F16H番地に音の長さの増分を入力。
+   \item 2～5の入力値を適当に変更させながら、スピーカーから発生する音の高さの聞こえる周波数範囲を測定。
+   \item 2～5の入力値を適当に変更させながら、
+   \end{enumerate}
+   
+   \begin{table}[htb]
+  \begin{center}
+    \caption{}
+    \begin{tabular}{|llll|} \hline
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\
+ &  &  &  \\ \hline
+    \end{tabular}
+    \label{}
+  \end{center}
+ \end{table}
+   
   
   
   
 % 図や表による実験データの添付、またそれらの説明を記載
  \section{実験結果}
   
+  \subsection{実験課題2.Z80の演算命令、フラグ、条件分岐及びサブルーチン実行時の観察}
+   \subsubsection{実験課題2-1.テストプログラムによる動作検証}
+   
+   
+   \subsubsection{実験課題2-2.演算命令及びフラグの観察}
+   
+   
+   \subsubsection{実験課題2-3.フラグ、条件分岐及びサブルーチン実行時の観察}
+   
+   
+  
+  \subsection{実験課題3.入出力制御}
+  
+   \subsubsection{実験課題3-1.スイッチ入力とLEDの制御}
+   
+   
+   \subsubsection{実験課題3-2.スピーカの制御}
+   
+   
   
   
 % 実験結果に基づいて課題の回答及びその考察を詳しく記載
  \section{考察}
   
+  \subsection{考察課題2.Z80の演算命令、フラグ、条件分岐及びサブルーチン実行時の観察}
+   \subsubsection{考察課題2-1.テストプログラムによる動作検証}
+   
+   
+   \subsubsection{考察課題2-2.演算命令及びフラグの観察}
+   
+   
+   \subsubsection{考察課題2-3.フラグ、条件分岐及びサブルーチン実行時の観察}
+   
+   
+  
+  \subsection{考察課題3.入出力制御}
+  
+   \subsubsection{考察課題3-1.スイッチ入力とLEDの制御}
+   
+   
+   \subsubsection{考察課題3-2.スピーカの制御}
+   
+   
   
   
 % まとめ
